# ParallelImageRecognition

./: CMakeLists.txt  LICENSE  README.md
include/: Classifier.h  FeatureExtractor.h  ImageLoader.h  PerformanceMonitor.h  Preprocessor.h
src/: Classifier.cpp  FeatureExtractor.cpp  ImageLoader.cpp  PerformanceMonitor.cpp  Preprocessor.cpp  main.cpp
